--- a/stylesheets/connector.css
+++ b/stylesheets/connector.css
@@ -1,72 +1,88 @@
 html {
-  background: url(../images/subway_small.jpg) no-repeat center center fixed;
+  background: url(../images/subway.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
-#banner {
+#ribbon {
   position: fixed;
   left: 0;
   width: 100%;
   height: 50px;
-  margin-top: 4%;
+  margin-top: 7%;
   background: rgba(0, 0, 0, .7);
   color: rgba(255, 255, 255, .65);
   font-family: Helvetica;
 }
+#ribbon div {
+  position: absolute;
+}
 
 #logo {
-  position: fixed;
-  margin-left: 4%;
-  margin-top: .9%;
+  margin-left: 5%;
+  margin-top: 25px;
+}
+#logo h1 {
+  margin: 0px;
+  line-height: 0px;
+  letter-spacing: 0px;
 }
 
 #navigation {
-  position: fixed;
-  width: 300px;
-  margin-left: 64%;
-  margin-top: 1.2%;
+  width: 400px;
+  margin-left: 61%;
+  margin-top: 10px;
 }
-
 #navigation ul li {
   display: inline;
   list-style-type: none;
   margin-right: 25px;
 }
-
 #navigation ul li:hover {
   cursor: pointer;
 }
 
 .content {
-  position: fixed;
+  display: none;
   margin-left: 60%;
-  margin-top: 7.6%;
+  margin-top: 50px;
   width: 30%;
-  height: 65%;
+  height: 400px;
   background: rgba(255, 255, 255, .7);
   color: #000000;
+  overflow: auto;
 }
-
 .content h2 {
   margin-left: 5%;
   margin-bottom: 1%;
 }
-
 .content p {
   margin-left: 5%;
+  margin-right: 5%;
 }
-
-#live, #collector, #media {
-  display: none;
+.content ul {
+  margin-top: 0px;
 }
-
-@font-face {
-  font-family: 'CMBX';
-  src: url('../fonts/cmbx10-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/cmbx10-webfont.woff') format('woff'),
-       url('../fonts/cmbx10-webfont.ttf') format('truetype'),
-       url('../fonts/cmbx10-webfont.svg#cmbx10') format('svg');
+.content ul li {
+  list-style-type: none;
+  margin-top: 10px;
+}
+.content iframe {
+  border: none;
+  position: relative;
+  width: 100%;
+  background: rgba(255, 255, 255, .7);
+}
+.content iframe.video {
+  height: 250px;
+  margin-top: 10px;
+}
+.content iframe.audio {
+  height: 100px;
+}
+.content img#speaker_mic {
+  height: 300px;
+  width: 100%;
 }
