--- a/stylesheets/connector.css
+++ b/stylesheets/connector.css
@@ -52,7 +52,7 @@ html {
   height: 400px;
   background: rgba(255, 255, 255, .7);
   color: #000000;
-  overflow: hidden;
+  overflow: auto;
 }
 .content h2 {
   margin-left: 5%;
