--- a/stylesheets/connector.css
+++ b/stylesheets/connector.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../images/subway.jpg) no-repeat center center fixed;
+  background: url(../images/subway_small.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -32,7 +32,7 @@ html {
 
 #navigation {
   width: 400px;
-  margin-left: 61%;
+  margin-left: 64%;
   margin-top: 10px;
 }
 #navigation ul li {
@@ -53,6 +53,10 @@ html {
   background: rgba(255, 255, 255, .7);
   color: #000000;
   overflow: auto;
+}
+.content a, a:hover, a:visited {
+  color: rgba(0, 0, 0, .65);
+  text-decoration: none;
 }
 .content h2 {
   margin-left: 5%;
@@ -77,12 +81,8 @@ html {
 }
 .content iframe.video {
   height: 250px;
-  margin-top: 10px;
+  margin-top: 67px;
 }
 .content iframe.audio {
   height: 100px;
-}
-.content img#speaker_mic {
-  height: 300px;
-  width: 100%;
 }
