Adding insignia video

--- a/stylesheets/connector.css
+++ b/stylesheets/connector.css
@@ -81,8 +81,9 @@ html {
 }
 .content iframe.video {
   height: 250px;
-  margin-top: 67px;
 }
 .content iframe.audio {
   height: 100px;
+  margin-top: 67px;
+  margin-bottom: 67px;
 }
